--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -16,7 +16,7 @@
                     <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/trade"><b style="color:#736eb4">Обмены</b></a>
                     <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/trade/add"><b
                             style="color:#736eb4">Добавить обмен</b></a>
-                    <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="#"><b style="color:#736eb4">Магазин</b></a>
+                    <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/shop"><b style="color:#736eb4">Магазин</b></a>
                     <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/about"><b style="color:#736eb4">О
                         нас</b></a>
                     <a class="me-4 py-4 link-body-emphasis text-decoration-none" href="/profile"><b
