--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -5,17 +5,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-5">
-    <h1>Обмены скинов</h1>
-    <div th:each="el : ${post}" class="alert alert-info mt-2">
-        <h3 th:text="${el.floatSkin}"/>
-        <p th:text="${el.nameSkin}"/>
-        <a th:href="'/trade/' + ${el.id}" class="btn btn-warning " >Детальнее</a>
+    <h1>Магазин скинов</h1>
+    <div th:each="el : ${inventory}" class="alert alert-info mt-2">
+        <h3 th:text="${el.name}"/>
+        <p th:text="${el.quality}"/>
+        <p th:text="${el.image}"/>
     </div>
 
-    <div th:insert="blocks/footer :: footer"></div>
-</div>
+<div th:insert="blocks/footer :: footer"></div>
+
 </body>
 </html>
