--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -10,13 +10,54 @@
 
 <div class="container mt-5">
     <h1>Магазин скинов</h1>
-    <div th:each="el : ${inventory}" class="alert alert-info mt-2">
-        <h3 th:text="${el.name}"/>
-        <p th:text="${el.quality}"/>
-        <p th:text="${el.image}"/>
+    <div class="col-md-15">
+        <div class="card">
+            <div class="container align-items-center p-4">
+                <div class="row">
+                    <div>
+                        <div class="col-md-15">
+                            <div class="card">
+                                <div class="container align-items-center p-3">
+                                    <strong>Введите название</strong>
+                                    <div class="Right d-inline-flex">
+                                        <form role="search">
+                                            <input class="form-control d-flex" type="search" placeholder="Поиск"
+                                                   aria-label="Search">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="album py-0 bg-body-tertiary">
+                                    <div class="container">
+                                        <div class="row row-cols-3 row-cols-sm-3 row-cols-md-5 g-3">
+                                            <div th:each="el : ${inventory}" class="col">
+                                                <a th:href="'/shop' + ${el.id}" class="btn btn-outline-primary card shadow-sm">
+                                                    <img src="img/M4A1-SHyperBeast.png"
+                                                         alt="avatar"
+                                                         class="rounded-circle img-fluid" style="width: 200px;">
+                                                    <div class="card-body">
+                                                        <h6 th:text="${el.name}"/>
+                                                        <p th:text="${el.quality}"/>
+                                                        <div class="d-flex justify-content-between align-items-center">
+                                                            <div class="btn-group">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-<div th:insert="blocks/footer :: footer"></div>
-
+    <div th:insert="blocks/footer :: footer"></div>
+</div>
 </body>
 </html>
