1)Добавил продажу скина через профиль 2)Добавил обмен скина 3)Добавил покупку скина

--- a/src/main/resources/templates/profileSettings.html
+++ b/src/main/resources/templates/profileSettings.html
@@ -35,7 +35,7 @@
                                 </li>
                                 <li class="list-group-item justify-content-between align-items-center p-3">
                                     <i class="fab fa-github fa-lg text-body"></i>
-                                    <a href="#" class="btn btn-outline-primary">Продать предметы</a>
+                                    <a href="/profile/inventorySell" class="btn btn-outline-primary">Продать предметы</a>
                                 </li>
                                 <li class="list-group-item justify-content-between align-items-center p-3">
                                     <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
