--- a/src/main/resources/templates/profileInventorySell.html
+++ b/src/main/resources/templates/profileInventorySell.html
@@ -109,6 +109,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div>
                                     <div class="album py-0 bg-body-tertiary">
                                         <div class="container">
@@ -123,6 +124,11 @@
                                                             <p th:text="${el.quality}"/>
                                                             <div class="d-flex justify-content-between align-items-center">
                                                                 <div class="btn-group">
+                                                                </div>
+                                                                <div class="card-body text-center">
+                                                                <form th:action="'/profile/inventorySell/' + ${el.id} + '/remove'" method="post">
+                                                                    <button class="btn btn-outline-danger " type="submit">Продать</button>
+                                                                </form>
                                                                 </div>
                                                             </div>
                                                         </div>
